--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
           <input id="vim" type="checkbox" />
           Vim (Rough around the edges)
         </label>
+        <label title="Some of the functionalities are implemented">
+          <input id="emacs" type="checkbox" />
+          Emacs (In Progress, word navigation is not done)
+        </label>
       </div>
       <div id="editor" class="editor-monaco"></div>
       <div id="vim-statusbar" class="vim-statusbar" style="display: none"></div>
