--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </label>
         <label title="Some of the functionalities are implemented">
           <input id="emacs" type="checkbox" />
-          Emacs (In Progress, word navigation is not done)
+          Emacs (In Progress)
         </label>
       </div>
       <div id="editor" class="editor-monaco"></div>
