--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
   <title>Monaco Playground</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-124254488-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-124254488-1');
+</script>
 </head>
 <body>
   <!-- <section class="section"> -->
