Use ace toknizer from npm

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 <body>
   <!-- <section class="section"> -->
     <div class="container">
+      <div>
+        This demo uses these labraries- <a href="https://github.com/brijeshb42/monaco-ace-tokenizer">monaco-ace-tokenizer</a>, <a href="https://github.com/brijeshb42/monaco-themes">monaco-themes</a>, <a href="https://github.com/brijeshb42/monaco-vim">monaco-vim</a>
+      </div>
       <div class="toolbar">
         <label>
           Syntax
@@ -24,7 +27,6 @@
         <label title="Works good enough">
           Theme
           <select class="hidden" id="theme-select"></select>
-          <a href="https://github.com/brijeshb42/monaco-themes">Github</a>
         </label>
         <label>
           <input id="minimap" type="checkbox" checked />
@@ -32,7 +34,7 @@
         </label>
         <label title="Rough around the edges. Some functionalities might not work">
           <input id="vim" type="checkbox" />
-          Vim <a href="https://github.com/brijeshb42/monaco-vim">Fork on Github</a>
+          Vim
         </label>
         <label title="Some of the functionalities are implemented">
           <input id="emacs" type="checkbox" />
