Install everything from npm

--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html>
 <head>
   <title>Monaco Playground</title>
+  <link rel="canonical" href="https://editor.bitwiser.in/" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script>
+    if (window.location.href.indexOf('a5ea1') >= 0) {
+      window.location.href = 'https://editor.bitwiser.in';
+    }
+  </script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124254488-1"></script>
 <script>
@@ -17,7 +23,7 @@
   <!-- <section class="section"> -->
     <div class="container">
       <div>
-        This demo uses these labraries- <a href="https://github.com/brijeshb42/monaco-ace-tokenizer">monaco-ace-tokenizer</a>, <a href="https://github.com/brijeshb42/monaco-themes">monaco-themes</a>, <a href="https://github.com/brijeshb42/monaco-vim">monaco-vim</a>
+        This demo uses these labraries- <a href="https://github.com/brijeshb42/monaco-ace-tokenizer">monaco-ace-tokenizer</a>, <a href="https://github.com/brijeshb42/monaco-themes">monaco-themes</a>, <a href="https://github.com/brijeshb42/monaco-vim">monaco-vim</a>, <a href="https://github.com/brijeshb42/monaco-emacs">monaco-emacs</a>
       </div>
       <div class="toolbar">
         <label>
