--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- <section class="section"> -->
     <div class="container">
       <div>
-        This demo uses these labraries- <a href="https://github.com/brijeshb42/monaco-ace-tokenizer">monaco-ace-tokenizer</a>, <a href="https://github.com/brijeshb42/monaco-themes">monaco-themes</a>, <a href="https://github.com/brijeshb42/monaco-vim">monaco-vim</a>, <a href="https://github.com/brijeshb42/monaco-emacs">monaco-emacs</a>
+        This demo uses these libraries- <a href="https://github.com/brijeshb42/monaco-ace-tokenizer">monaco-ace-tokenizer</a>, <a href="https://github.com/brijeshb42/monaco-themes">monaco-themes</a>, <a href="https://github.com/brijeshb42/monaco-vim">monaco-vim</a>, <a href="https://github.com/brijeshb42/monaco-emacs">monaco-emacs</a>
       </div>
       <div class="toolbar">
         <label>
